--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "base16-tomorrow-dark-theme",
+  "name": "base16-tomorrow-dark-theme-andrew",
   "theme": "syntax",
-  "version": "1.5.0",
-  "description": "Base16 dark theme for Atom",
+  "version": "0.0.1",
+  "description": "Base16 dark theme for Atom, forked from base-16 tomorrow.",
   "keywords": [
     "base16",
     "dark",
     "syntax"
   ],
-  "repository": "https://github.com/atom/base16-tomorrow-dark-theme",
+  "repository": "https://github.com/andrewmartin/base16-tomorrow-dark-theme",
   "license": "MIT",
   "engines": {
     "atom": ">0.49.0"
